# PokerBot

./: Cudaisavalible.py  Dockerfile  GUI.py  OpenCv.py  PlayWithUser.py  Testplay.py  dqn_torch-rl_json.json  dqn_torch-rl_weights.pth  main.py  pyproject.toml
agents/: AI_play.py  Human_agent.py  agent_MCTS.py  agent_ppo.py  agent_torch_dqn.py  mcts_net.pth
gym_env/: env.py
models/: dqn_2p_weights.pth  dqn_fork_50stack_200ep_weights.pth  dqn_fork_50stack_200epp_batch1024_0001sp_weights.pth  dqn_fork_50stack_200epp_new_reward_calc_weights.pth  dqn_raiser2_ep10_meta.json  dqn_raiser2_ep1480_weights.pth  dqn_raiser2_ep1490_meta.json  dqn_raiser2_ep1490_weights.pth  dqn_raiser2_ep30_meta.json  dqn_raiser2_ep30_weights.pth  dqn_raiser2_ep70_weights.pth  dqn_raiser2_weights.pth  dqn_raiser_ep100_meta.json  dqn_raiser_ep100_weights.pth  dqn_raiser_ep20_meta.json  dqn_raiser_ep20_weights.pth  dqn_raiser_ep40_meta.json  dqn_raiser_ep50_meta.json  dqn_raiser_ep50_weights.pth  dqn_raiser_newreward_ep490_ep980_weights.pth  dqn_raiser_newreward_ep490_ep990_ep1190_weights.pth  dqn_raiser_newreward_ep490_weights.pth  dqn_saver1_ep10_weights.pth  dqn_saver1_ep20_meta.json  dqn_saver1_ep20_weights.pth  dqn_saver1_ep30_meta.json  dqn_saver1_ep30_weights.pth  dqn_saver2_ep10_weights.pth  dqn_saver2_ep20_meta.json  dqn_saver2_ep20_weights.pth  dqn_saver2_ep40_meta.json  dqn_saver2_ep50_meta.json  dqn_saver2_ep50_weights.pth  dqn_saver2_ep70_weights.pth  dqn_saver2_ep80_meta.json  dqn_saver2_ep80_weights.pth
tools/montecarlo_cpp/: pymontecarlo.cpp
