[tool.poetry]
name = "neuron-poker"
version = "0.1.0"
description = ""
authors = ["Nicolas Dickreuter <dickreuter@gmail.com>"]
readme = "readme.rst"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pytest = "^8.0.0"
pylint = "^3.0.3"
gym = "0.23.0"
pyglet = "1.5.15"
pybind11 = "^2.11.1"
cppimport = "^22.8.2"
docopt = "^0.6.2"
pydocstyle = "^6.3.0"
matplotlib = "^3.8.2"
mpld3 = "^0.5.10"
tensorboard = "2.16.2"
torch = { version = "2.3.0", extras = ["cu128"] }
pyautogui = "^0.9.54"
pynput = "^1.7.6"
pygetwindow = "^0.0.9"
pillow = "^10.3.0"
ttkbootstrap = "^1.10.1"
tkintertable = "^1.3"
opencv-python = "^4.9.0"
pytesseract = "^0.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
